dotnet/versioned_docs/version-1.12/api/class-mouse.mdx
---
id: class-mouse
title: "Mouse"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The Mouse class operates in main-frame CSS pixels relative to the top-left corner of the viewport.

Every `page` object has its own Mouse, accessible with [Page.Mouse](./api/class-page.mdx#page-mouse).

```csharp
await Page.Mouse.MoveAsync(0, 0);
await Page.Mouse.DownAsync();
await Page.Mouse.MoveAsync(0, 100);
await Page.Mouse.MoveAsync(100, 100);
await Page.Mouse.MoveAsync(100, 0);
await Page.Mouse.MoveAsync(0, 0);
await Page.Mouse.UpAsync();
```


- [Mouse.ClickAsync(x, y, options)](./api/class-mouse.mdx#mouse-click)
- [Mouse.DblClickAsync(x, y, options)](./api/class-mouse.mdx#mouse-dblclick)
- [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down)
- [Mouse.MoveAsync(x, y, options)](./api/class-mouse.mdx#mouse-move)
- [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up)

## Mouse.ClickAsync(x, y, options) {#mouse-click}
- `x` &#60;[double]&#62;
- `y` &#60;[double]&#62;
- `options` &#60;`MouseClickOptions?`&#62;
  - `Button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
  - `ClickCount` &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].
  - `Delay` &#60;[double]?&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
- returns: &#60;[void]&#62;

Shortcut for [Mouse.MoveAsync(x, y, options)](./api/class-mouse.mdx#mouse-move), [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down), [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up).

## Mouse.DblClickAsync(x, y, options) {#mouse-dblclick}
- `x` &#60;[double]&#62;
- `y` &#60;[double]&#62;
- `options` &#60;`MouseDblClickOptions?`&#62;
  - `Button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
  - `Delay` &#60;[double]?&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.
- returns: &#60;[void]&#62;

Shortcut for [Mouse.MoveAsync(x, y, options)](./api/class-mouse.mdx#mouse-move), [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down), [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up), [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down) and [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up).

## Mouse.DownAsync(options) {#mouse-down}
- `options` &#60;`MouseDownOptions?`&#62;
  - `Button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
  - `ClickCount` &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].
- returns: &#60;[void]&#62;

Dispatches a `mousedown` event.

## Mouse.MoveAsync(x, y, options) {#mouse-move}
- `x` &#60;[double]&#62;
- `y` &#60;[double]&#62;
- `options` &#60;`MouseMoveOptions?`&#62;
  - `Steps` &#60;[int]?&#62; defaults to 1. Sends intermediate `mousemove` events.
- returns: &#60;[void]&#62;

Dispatches a `mousemove` event.

## Mouse.UpAsync(options) {#mouse-up}
- `options` &#60;`MouseUpOptions?`&#62;
  - `Button` &#60;"left"|"right"|"middle"&#62; Defaults to `left`.
  - `ClickCount` &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].
- returns: &#60;[void]&#62;

Dispatches a `mouseup` event.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[URL]: https://nodejs.org/api/url.html "URL"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1?view=net-5.0 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2?view=net-5.0 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable?view=net-5.0 "IEnumerable"
[TResult]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task-1?view=net-5.0 "TResult"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"