dotnet/versioned_docs/version-1.15/api/class-mouse.mdx
---
id: class-mouse
title: "Mouse"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The Mouse class operates in main-frame CSS pixels relative to the top-left corner of the viewport.

Every `page` object has its own Mouse, accessible with [Page.Mouse](./api/class-page.mdx#page-mouse).

```csharp
await Page.Mouse.MoveAsync(0, 0);
await Page.Mouse.DownAsync();
await Page.Mouse.MoveAsync(0, 100);
await Page.Mouse.MoveAsync(100, 100);
await Page.Mouse.MoveAsync(100, 0);
await Page.Mouse.MoveAsync(0, 0);
await Page.Mouse.UpAsync();
```


- [Mouse.ClickAsync(x, y, options)](./api/class-mouse.mdx#mouse-click)
- [Mouse.DblClickAsync(x, y, options)](./api/class-mouse.mdx#mouse-dblclick)
- [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down)
- [Mouse.MoveAsync(x, y, options)](./api/class-mouse.mdx#mouse-move)
- [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up)
- [Mouse.WheelAsync(deltaX, deltaY)](./api/class-mouse.mdx#mouse-wheel)

## Mouse.ClickAsync(x, y, options) {#mouse-click}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-x"/> &#60;[double]&#62;<a href="#mouse-click-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-y"/> &#60;[double]&#62;<a href="#mouse-click-option-y" class="list-anchor">#</a>
- `options` &#60;`MouseClickOptions?`&#62;
  - `Button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-button"/> &#60;`enum MouseButton { Left, Right, Middle }?`&#62; Defaults to `left`.<a href="#mouse-click-option-button" class="list-anchor">#</a>
  - `ClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-click-count"/> &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-click-option-click-count" class="list-anchor">#</a>
  - `Delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-delay"/> &#60;[double]?&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-click-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-return"/> &#60;[void]&#62;<a href="#mouse-click-return" class="list-anchor">#</a>

Shortcut for [Mouse.MoveAsync(x, y, options)](./api/class-mouse.mdx#mouse-move), [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down), [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up).

## Mouse.DblClickAsync(x, y, options) {#mouse-dblclick}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-x"/> &#60;[double]&#62;<a href="#mouse-dblclick-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-y"/> &#60;[double]&#62;<a href="#mouse-dblclick-option-y" class="list-anchor">#</a>
- `options` &#60;`MouseDblClickOptions?`&#62;
  - `Button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-button"/> &#60;`enum MouseButton { Left, Right, Middle }?`&#62; Defaults to `left`.<a href="#mouse-dblclick-option-button" class="list-anchor">#</a>
  - `Delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-delay"/> &#60;[double]?&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-dblclick-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-return"/> &#60;[void]&#62;<a href="#mouse-dblclick-return" class="list-anchor">#</a>

Shortcut for [Mouse.MoveAsync(x, y, options)](./api/class-mouse.mdx#mouse-move), [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down), [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up), [Mouse.DownAsync(options)](./api/class-mouse.mdx#mouse-down) and [Mouse.UpAsync(options)](./api/class-mouse.mdx#mouse-up).

## Mouse.DownAsync(options) {#mouse-down}
- `options` &#60;`MouseDownOptions?`&#62;
  - `Button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-button"/> &#60;`enum MouseButton { Left, Right, Middle }?`&#62; Defaults to `left`.<a href="#mouse-down-option-button" class="list-anchor">#</a>
  - `ClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-click-count"/> &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-down-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-return"/> &#60;[void]&#62;<a href="#mouse-down-return" class="list-anchor">#</a>

Dispatches a `mousedown` event.

## Mouse.MoveAsync(x, y, options) {#mouse-move}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-x"/> &#60;[double]&#62;<a href="#mouse-move-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-y"/> &#60;[double]&#62;<a href="#mouse-move-option-y" class="list-anchor">#</a>
- `options` &#60;`MouseMoveOptions?`&#62;
  - `Steps`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-steps"/> &#60;[int]?&#62; defaults to 1. Sends intermediate `mousemove` events.<a href="#mouse-move-option-steps" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-return"/> &#60;[void]&#62;<a href="#mouse-move-return" class="list-anchor">#</a>

Dispatches a `mousemove` event.

## Mouse.UpAsync(options) {#mouse-up}
- `options` &#60;`MouseUpOptions?`&#62;
  - `Button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-button"/> &#60;`enum MouseButton { Left, Right, Middle }?`&#62; Defaults to `left`.<a href="#mouse-up-option-button" class="list-anchor">#</a>
  - `ClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-click-count"/> &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-up-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-return"/> &#60;[void]&#62;<a href="#mouse-up-return" class="list-anchor">#</a>

Dispatches a `mouseup` event.

## Mouse.WheelAsync(deltaX, deltaY) {#mouse-wheel}
- `deltaX`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-x"/> &#60;[double]&#62; Pixels to scroll horizontally.<a href="#mouse-wheel-option-delta-x" class="list-anchor">#</a>
- `deltaY`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-y"/> &#60;[double]&#62; Pixels to scroll vertically.<a href="#mouse-wheel-option-delta-y" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-return"/> &#60;[void]&#62;<a href="#mouse-wheel-return" class="list-anchor">#</a>

Dispatches a `wheel` event.

:::note
Wheel events may cause scrolling if they are not handled, and this method does not wait for the scrolling to finish before returning.
:::


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./core-concepts.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
